--- a/sym-eventcalendar-template.html
+++ b/sym-eventcalendar-template.html
@@ -1,39 +1,63 @@
-   <div class="eventcalendar-container">
-        <link rel="stylesheet" type="text/css" href="scripts/app/editor/symbols/ext/sym-eventcalendar-style.css">
-	    <header class="calendar-header">Event Calendar
+<div class="event-calendar-container">
+    <link rel="stylesheet" href="scripts/app/editor/symbols/ext/sym-eventcalendar-style.css">
+    <header class="calendar-header">
+        <h2>Event Frame Calendar</h2>
+        <div class="calendar-header-info">
             <p class="calendar-current-date">Month Year</p>
             <div class="calendar-navigation">
-                <button type="button" id='calendar-prev'> << </button>
-		&nbsp;       	
-		<button type="button" id='calendar-next'> >> </button>
-		<!--span id="calendar-prev" class="material-symbols-rounded">chevron_left</span-->
-                <!--span id="calendar-next" class="material-symbols-rounded">chevron_right</span-->
+                <button type="button" id="calendar-prev" class="nav-button">
+                    <span class="material-icons">⬅</span>
+                </button>
+                <button type="button" id="calendar-next" class="nav-button">
+                    <span class="material-icons">➡</span>
+                </button>
             </div>
-        </header>
-        <div class="calendar-body">
-            <ul class="calendar-weekdays">
-                <li>Sun</li>
-                <li>Mon</li>
-                <li>Tue</li>
-                <li>Wed</li>
-                <li>Thu</li>
-                <li>Fri</li>
-                <li>Sat</li>
-            </ul>
-            <ul class="calendar-area"></ul>
+        </div>
+    </header>
+    <div class="calendar-body">
+        <ul class="calendar-weekdays">
+            <li>Sun</li>
+            <li>Mon</li>
+            <li>Tue</li>
+            <li>Wed</li>
+            <li>Thu</li>
+            <li>Fri</li>
+            <li>Sat</li>
+        </ul>
+        <div class="calendar-area">
+            <!-- Days will be dynamically generated here -->
         </div>
     </div>
-    
-    <!-- for DEBUG -->
-    <!--button 
-    ng-style="{
-                    'background-color': '#414853',
-                    'color': '#00a2e8',
-                    'padding': '5px',
-                    'width': '50px',
-                    'margin': '2px'
-                }" 
-    ng-click = "UpdateEvents()">Events Update</button-->
 
-    <!-- for DEBUG -->
-    <!--p style="color: skyblue">Returned Items:<textarea rows="24" cols="64"> {{Value}}</textarea></p-->
+    <!-- Loading Spinner -->
+    <div class="loading-spinner"></div>
+</div>
+
+<!-- JavaScript to Toggle Loading Spinner -->
+<script>
+    // Get the calendar container element
+    const calendarContainer = document.querySelector('.event-calendar-container');
+
+    function showLoading() {
+        calendarContainer.classList.add('loading');
+    }
+
+    function hideLoading() {
+        calendarContainer.classList.remove('loading');
+    }
+
+    // Example usage: show loading spinner during data fetch W.I.P.
+    function fetchData() {
+        showLoading();  // Show spinner when starting data fetch
+
+        // Simulate a data fetch with setTimeout
+        setTimeout(() => {
+            hideLoading(); // Hide spinner when data fetch is complete
+        }, 2000);  // Adjust time as needed for data loading simulation
+    }
+
+
+    fetchData();
+
+
+</script>
